@@ -99,7 +99,7 @@ public class LeakAwareDataBufferFactory implements DataBufferFactory {
 			List<AssertionError> errors = this.created.stream()
 					.filter(LeakAwareDataBuffer::isAllocated)
 					.map(LeakAwareDataBuffer::leakError)
-					.collect(Collectors.toList());
+					.toList();
 
 			errors.forEach(it -> logger.error("Leaked error: ", it));
 			throw new AssertionError(errors.size() + " buffer leaks detected (see logs above)");
